--- a/components/display/DiscordChat/DiscordChat.scss
+++ b/components/display/DiscordChat/DiscordChat.scss
@@ -1,3 +1,66 @@
 .c-discord-chat {
+	position: fixed;
 
+	&__avatar-placeholder {
+		width       : 3rem;
+		height      : 3rem;
+		margin-right: .2rem;
+		overflow    : hidden;
+
+		& > img {
+			width     : 100%;
+			height    : 100%;
+			object-fit: cover;
+		}
+	}
+
+	&__member {
+		position: relative;
+
+		& > * {
+			position: relative;
+			z-index : 1;
+		}
+
+		&::after {
+			content         : "";
+			position        : absolute;
+			top             : 0;
+			left            : 0;
+			width           : 100%;
+			height          : 100%;
+			background-color: rgba(0, 0, 0, .33);
+			opacity         : 1;
+			transition      : opacity .15s linear;
+		}
+
+		&--active::after {
+			opacity: 0;
+		}
+
+		&-name {
+			overflow     : hidden;
+			text-overflow: ellipsis;
+			white-space  : nowrap;
+			word-break   : keep-all;
+		}
+	}
+
+	&__speaker-placeholder {
+		position  : absolute;
+		right     : 100%;
+		top       : 50%;
+		width     : 3rem;
+		text-align: center;
+		transform : translateY(-50%);
+		opacity   : 0;
+	}
+
+	&--odst {}
+
+	&--reach {}
+
+	&--h2a {}
+
+	&--h5 {}
 }
