styles for latest sub & follow

--- a/components/display/DiscordChat/themes/odst.scss
+++ b/components/display/DiscordChat/themes/odst.scss
@@ -40,7 +40,7 @@
 				position: absolute;
 				width   : .8rem;
 				height  : 0;
-				border-top: .2rem solid rgba(216, 199, 148, 1);
+				border-top: .2rem solid #d8c794;
 				transform : rotate(-45deg);
 			}
 
