--- a/components/display/DiscordChat/themes/h3.scss
+++ b/components/display/DiscordChat/themes/h3.scss
@@ -40,7 +40,7 @@
 				position: absolute;
 				width   : .8rem;
 				height  : 0;
-				border-top: .2rem solid rgba(165, 213, 255, 1);
+				border-top: .2rem solid #a5d5ff;
 				transform : rotate(-45deg);
 			}
 
