--- a/components/display/DiscordChat/themes/h2a.scss
+++ b/components/display/DiscordChat/themes/h2a.scss
@@ -98,6 +98,7 @@
 
 			&-name {
 				background-color: transparent !important;
+				color           : #ffffff !important;
 				font-size       : 1.4rem;
 			}
 
