--- a/assets/styles/global/_fonts.scss
+++ b/assets/styles/global/_fonts.scss
@@ -3,43 +3,52 @@
     font-family: 'IBM Plex Sans';
     font-style: normal;
     font-weight: 400;
-    src: url('./../fonts/ibm-plex-sans-v5-latin-regular.eot'); 
+    src: url('./../fonts/ibm-plex-sans-v5-latin-regular.eot');
     src: local('IBM Plex Sans'), local('IBMPlexSans'),
-         url('./../fonts/ibm-plex-sans-v5-latin-regular.eot?#iefix') format('embedded-opentype'), 
-         url('./../fonts/ibm-plex-sans-v5-latin-regular.woff2') format('woff2'), 
-         url('./../fonts/ibm-plex-sans-v5-latin-regular.woff') format('woff'), 
-         url('./../fonts/ibm-plex-sans-v5-latin-regular.ttf') format('truetype'), 
-         url('./../fonts/ibm-plex-sans-v5-latin-regular.svg#IBMPlexSans') format('svg'); 
+         url('./../fonts/ibm-plex-sans-v5-latin-regular.eot?#iefix') format('embedded-opentype'),
+         url('./../fonts/ibm-plex-sans-v5-latin-regular.woff2') format('woff2'),
+         url('./../fonts/ibm-plex-sans-v5-latin-regular.woff') format('woff'),
+         url('./../fonts/ibm-plex-sans-v5-latin-regular.ttf') format('truetype'),
+         url('./../fonts/ibm-plex-sans-v5-latin-regular.svg#IBMPlexSans') format('svg');
 }
-    
+
 /* ibm-plex-sans-700 - latin */
 @font-face {
     font-family: 'IBM Plex Sans';
     font-style: normal;
     font-weight: 700;
-    src: url('./../fonts/ibm-plex-sans-v5-latin-700.eot'); 
+    src: url('./../fonts/ibm-plex-sans-v5-latin-700.eot');
     src: local('IBM Plex Sans Bold'), local('IBMPlexSans-Bold'),
-         url('./../fonts/ibm-plex-sans-v5-latin-700.eot?#iefix') format('embedded-opentype'), 
-         url('./../fonts/ibm-plex-sans-v5-latin-700.woff2') format('woff2'), 
-         url('./../fonts/ibm-plex-sans-v5-latin-700.woff') format('woff'), 
-         url('./../fonts/ibm-plex-sans-v5-latin-700.ttf') format('truetype'), 
-         url('./../fonts/ibm-plex-sans-v5-latin-700.svg#IBMPlexSans') format('svg'); 
+         url('./../fonts/ibm-plex-sans-v5-latin-700.eot?#iefix') format('embedded-opentype'),
+         url('./../fonts/ibm-plex-sans-v5-latin-700.woff2') format('woff2'),
+         url('./../fonts/ibm-plex-sans-v5-latin-700.woff') format('woff'),
+         url('./../fonts/ibm-plex-sans-v5-latin-700.ttf') format('truetype'),
+         url('./../fonts/ibm-plex-sans-v5-latin-700.svg#IBMPlexSans') format('svg');
 }
 
 @font-face {
     font-family: 'Handel Gothic D Light';
     font-style: normal;
     font-weight: 400;
-    src: url('./../fonts/handel-gothic-d-light.otf'); 
+    src: url('./../fonts/handel-gothic-d-light.otf');
     src: local('Handel Gothic D Light'), local('HandelGothicDLight'),
-         url('./../fonts/handel-gothic-d-light.otf') format('truetype'); 
+         url('./../fonts/handel-gothic-d-light.otf') format('truetype');
+}
+
+@font-face {
+  font-family: 'Ropa Sans';
+  font-style: normal;
+  font-weight: 400;
+  src: url('./../fonts/RopaSans-Regular.ttf');
+  src: local('Ropa Sans'), local('RopSans'),
+       url('./../fonts/RopaSans-Regular.ttf') format('truetype');
 }
 
 @font-face {
     font-family: 'Pathway Gothic One';
     font-style: normal;
     font-weight: 400;
-    src: url('./../fonts/pathway-gothic-one-regular.ttf'); 
+    src: url('./../fonts/pathway-gothic-one-regular.ttf');
     src: local('Pathway Gothic One'), local('PathwayGothicOne-Regular'),
-         url('./../fonts/pathway-gothic-one-regular.ttf') format('truetype'); 
+         url('./../fonts/pathway-gothic-one-regular.ttf') format('truetype');
 }
