--- a/components/display/SocialNetworks/SocialNetworks.scss
+++ b/components/display/SocialNetworks/SocialNetworks.scss
@@ -80,7 +80,7 @@
 	&--reach {
 		top        : 1.8rem;
 		left       : 50%;
-		transform  : translateX(-50%); 
+		transform  : translateX(-50%);
 		font-family: 'Pathway Gothic One', sans-serif;
 
 		.c-social-links__link--bouncing {
@@ -119,7 +119,7 @@
 	&--h5 {
 		top        : .6rem;
 		left       : 50%;
-		transform  : translateX(-50%); 
+		transform  : translateX(-50%);
 		font-family: 'Pathway Gothic One', sans-serif;
 
 		.c-social-links__link--bouncing {
@@ -158,24 +158,81 @@
 	&--menu {
 		top        : 2.4rem;
 		left       : 50%;
-		transform  : translateX(-50%); 
+		transform  : translateX(-50%);
 		font-family: 'Pathway Gothic One', sans-serif;
 
 		.c-social-links__link--bouncing {
 			animation: bounce-y 1.5s normal forwards;
 		}
 	}
+
+  &--infinite {
+    position : fixed;
+    top      : 1rem;
+    left     : 50%;
+    transform: translateX(-50%);
+
+    .c-social-links__icon-wrapper {
+      background-color: transparent !important;
+      opacity         : .2;
+      transform       : scale(.8);
+      animation       : infinite-icons 40s linear infinite;
+
+      & > img {
+        width: 3.2rem;
+      }
+    }
+
+    &.c-social-links--4 .c-social-links__link:nth-child(2) {
+      margin-bottom: -.4rem;
+    }
+
+    &.c-social-links--4 .c-social-links__link:nth-child(3) {
+      margin-bottom: -.4rem;
+    }
+
+    .c-social-links__link {
+      margin-left : .6rem;
+      margin-right: .6rem;
+
+      &:first-child .c-social-links__icon-wrapper,
+      &:first-child span { animation-delay: 0s; }
+      &:nth-child(2) .c-social-links__icon-wrapper,
+      &:nth-child(2) span { animation-delay: 10s; }
+      &:nth-child(3) .c-social-links__icon-wrapper,
+      &:nth-child(3) span { animation-delay: 20s; }
+      &:last-child .c-social-links__icon-wrapper,
+      &:last-child span { animation-delay: 30s; }
+    }
+
+    span {
+      position      : absolute;
+      top           : 100%;
+      left          : 0;
+      width         : 100%;
+      margin-top    : 1.6rem;
+      color         : #b8dafb;
+      font-size     : 1.8rem;
+      font-family   : 'Ropa Sans';
+      text-align    : center;
+      letter-spacing: .1rem;
+      text-shadow   : -.3rem -.3rem .1rem rgba(184, 218, 251, .25), .1rem .1rem .1rem rgba(255, 0, 0, .33);
+      opacity       : 0;
+      transform     : translate3d(2rem, 0, 0);
+      animation     : infinite-social-network-texts 40s linear infinite;
+    }
+  }
 }
 
 @keyframes bounce-y {
     0%, 20%, 50%, 80%, 100% {
         transform: translateY(0)
     }
-    
+
     40% {
-        transform: translateY(-1.4rem)   
+        transform: translateY(-1.4rem)
     }
-    
+
     60% {
         transform: translateY(-.7rem)
     }
@@ -185,12 +242,37 @@
     0%, 20%, 50%, 80%, 100% {
         transform: translateX(0)
     }
-    
+
     40% {
-        transform: translateX(1.4rem)   
+        transform: translateX(1.4rem)
     }
-    
+
     60% {
         transform: translateX(.7rem)
     }
+}
+
+@keyframes infinite-icons {
+	0%, 25.75%, 100% {
+		opacity: .2;
+		transform: scale(.8);
+	}
+	0.75%, 25% {
+		opacity: 1;
+		transform: scale(1);
+	}
+}
+@keyframes infinite-social-network-texts {
+	0% {
+		opacity: 0;
+		transform: translate3d(2rem, 0, 0);
+	}
+	0.75%, 25% {
+		opacity: 1;
+		transform: translate3d(0, 0, 0);
+	}
+	25.75%, 100% {
+		opacity: 0;
+		transform: translate3d(-2rem, 0, 0);
+	}
 }
